--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "https://aleksandr-pustovoy.github.io/portfolio",
-  "name": "portfolio",
-  "version": "0.1.0",
+  "name": "site-portfolio",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
