--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://aleksandr-pustovoy.github.io/portfolio",
   "name": "site-portfolio",
   "version": "1.0.1",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
